bitbybit/tests/no_compile/invalid_bit_pos/invalid_bit_pos_u64.rs
use bitbybit::bitfield;

#[bitfield(u64, default = 0)]
struct Test {
    #[bit(64, rw)]
    field: bool,
}

fn main() {}
